starstream-to-wasm/tests/snapshots/baseline__add.snap
---
source: starstream-to-wasm/tests/baseline.rs
description: "TypedProgram { definitions: [Function(TypedFunctionDef { export: Some(Script), name: Identifier { name: \"add\", span: Some(19..22) }, params: [TypedFunctionParam { name: Identifier { name: \"x\", span: Some(23..24) }, ty: Int }, TypedFunctionParam { name: Identifier { name: \"y\", span: Some(31..32) }, ty: Int }], return_type: Int, body: TypedBlock { statements: [], tail_expression: Some(Spanned { node: TypedExpr { ty: Int, kind: Binary { op: Add, left: Spanned { node: TypedExpr { ty: Int, kind: Identifier(Identifier { name: \"x\", span: Some(60..61) }) }, span: 60..62 }, right: Spanned { node: TypedExpr { ty: Int, kind: Identifier(Identifier { name: \"y\", span: Some(64..65) }) }, span: 64..74 } } }, span: 60..74 }) } })] }"
---
(module
  (type (;0;) (func (param i64 i64) (result i64)))
  (export "add" (func 0))
  (func (;0;) (type 0) (param i64 i64) (result i64)
    (i64.add
      (local.get 0)
      (local.get 1))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;) (func (param "x" s64) (param "y" s64) (result s64)))
              (export (;0;) "add" (func (type 0)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)
