starstream-to-wasm/tests/snapshots/baseline__inputs@if_elseif_else.star.snap
---
source: starstream-to-wasm/tests/baseline.rs
description: "TypedProgram { definitions: [Function(TypedFunctionDef { export: Some(Script), name: Identifier { name: \"main\", span: Some(10..14) }, params: [], return_type: Unit, body: TypedBlock { statements: [], tail_expression: Some(Spanned { node: TypedExpr { ty: Unit, kind: If { branches: [(Spanned { node: TypedExpr { ty: Bool, kind: Literal(Boolean(false)) }, span: 27..32 }, TypedBlock { statements: [Expression(Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(1)) }, span: 44..45 })], tail_expression: None }), (Spanned { node: TypedExpr { ty: Bool, kind: Literal(Boolean(true)) }, span: 62..66 }, TypedBlock { statements: [Expression(Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(2)) }, span: 78..79 })], tail_expression: None })], else_branch: Some(TypedBlock { statements: [Expression(Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(3)) }, span: 102..103 })], tail_expression: None }) } }, span: 23..111 }) } })] }"
input_file: starstream-to-wasm/tests/inputs/if_elseif_else.star
---
(module
  (type (;0;) (func))
  (export "main" (func 0))
  (func (;0;) (type 0)
    (block ;; label = @1
      (block ;; label = @2
        (br_if 0 (;@2;)
          (i32.eqz
            (i32.const 0)))
        (drop
          (i64.const 1))
        (br 1 (;@1;)))
      (block ;; label = @2
        (br_if 0 (;@2;)
          (i32.eqz
            (i32.const 1)))
        (drop
          (i64.const 2))
        (br 1 (;@1;)))
      (drop
        (i64.const 3)))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;) (func))
              (export (;0;) "main" (func (type 0)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)
