starstream-to-wasm/tests/snapshots/baseline__inputs@while_simple.star.snap
---
source: starstream-to-wasm/tests/baseline.rs
description: "TypedProgram { definitions: [Function(TypedFunctionDef { export: Some(Script), name: Identifier { name: \"main\", span: Some(10..14) }, params: [], return_type: Unit, body: TypedBlock { statements: [VariableDeclaration { mutable: true, name: Identifier { name: \"foo\", span: Some(31..34) }, value: Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(0)) }, span: 37..38 } }, While { condition: Spanned { node: TypedExpr { ty: Bool, kind: Binary { op: Less, left: Spanned { node: TypedExpr { ty: Int, kind: Identifier(Identifier { name: \"foo\", span: Some(51..54) }) }, span: 51..55 }, right: Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(10)) }, span: 57..59 } } }, span: 51..59 }, body: TypedBlock { statements: [Assignment { target: Identifier { name: \"foo\", span: Some(71..74) }, value: Spanned { node: TypedExpr { ty: Int, kind: Binary { op: Add, left: Spanned { node: TypedExpr { ty: Int, kind: Identifier(Identifier { name: \"foo\", span: Some(77..80) }) }, span: 77..81 }, right: Spanned { node: TypedExpr { ty: Int, kind: Literal(Integer(1)) }, span: 83..84 } } }, span: 77..84 } }], tail_expression: None } }], tail_expression: None } })] }"
input_file: starstream-to-wasm/tests/inputs/while_simple.star
---
(module
  (type (;0;) (func))
  (export "main" (func 0))
  (func (;0;) (type 0)
    (local i64)
    (local.set 0
      (i64.const 0))
    (block ;; label = @1
      (loop ;; label = @2
        (br_if 1 (;@1;)
          (i32.eqz
            (i64.lt_s
              (local.get 0)
              (i64.const 10))))
        (local.set 0
          (i64.add
            (local.get 0)
            (i64.const 1)))
        (br 0 (;@2;))))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;) (func))
              (export (;0;) "main" (func (type 0)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)
